# seshat

./: .cloak  .env.example  .gitignore  .seshat.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  meu-relatorio.html  pyproject.toml  requirements-dev.txt  seshat-review.md  setup.py  test_animation.py  test_file.py  test_fix.py
.claude/: settings.local.json
.github/workflows/: main.yml  release.yml
docs/: cli.md  configuracao.md  cutover-decision.md  json-contract.md  parity-matrix.md  refactor-plan.md  release-checklist.md  seshat-examples.md  tooling-architecture.md  ui-contract.md  ui-customization.md
docs/refactor-tasks/: 000-index.md  001-parity-matrix.md  002-git-client-repo-path.md  003-e2e-git-test-harness.md  004-e2e-no-ai-commit-fast-paths.md  005-e2e-cli-init-config-fix.md  006-dotenv-support.md  007-keyring-secret-storage.md  008-effective-config-pipeline.md  009-provider-http-abstraction.md  010-openai-compatible-provider-tests.md  011-anthropic-gemini-ollama-tests.md  012-cli-provider-tests.md  013-code-review-judge-flow.md  014-review-logging-filtering.md  015-tooling-refactor-strategies.md  016-tooling-e2e-fake-commands.md  017-ui-output-contract.md  018-json-mode-contract.md  019-gpg-hardening.md  020-release-packaging-docs.md  021-python-cutover.md
examples/: bench_demo.rs  bench_html_demo.rs
scripts/: problematic_file.py  problematic_lint.py  problematic_typecheck.py  ui_only_preview.py  ui_preview.py
scripts/bench/: Makefile
scripts/dataset/: Makefile  README.md  extract_commits.sh  normalize.py
scripts/training/: Modelfile.template  OLLAMA_README.md  README.md  import_to_ollama.sh  setup.sh  train.py
seshat/: __init__.py  __main__.py  cli.py  code_review.py  commands.py  config.py  core.py  flow.py  providers.py  services.py  theme.py  tooling.py  tooling_ts.py  ui.py  utils.py
seshat/tooling/: __init__.py  base.py  python.py  runner.py  typescript.py
site/: biome.json  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  page.tsx  theme-toggle.tsx
site/app/bench/: bench-dashboard.tsx  page.tsx
site/app/docs/: layout.tsx
site/app/docs/[[...mdxPath]]/: page.tsx
site/content/: _meta.js  cli.md  cutover-decision.md  index.mdx  parity-matrix.md  release-checklist.md  seshat-commit.md  ui-customization.md
site/docs/: cutover-decision.md  json-contract.md  parity-matrix.md  release-checklist.md  seshat-examples.md
site/public/data/: bench.json
src/: bench.rs  cli.rs  config.rs  core.rs  flow.rs  git.rs  json_output.rs  lib.rs  main.rs  profiles.rs  providers.rs  review.rs  tooling.rs  ui.rs  utils.rs
src/rtk/: diff.rs  filter.rs  mod.rs
src/tooling/: mod.rs  python.rs  runner.rs  rust.rs  types.rs  typescript.rs
tests/: e2e_cli.rs  e2e_git.rs  test_cli.py  test_code_review.py  test_config.py  test_core.py  test_providers.py  test_services.py  test_tooling.py  test_tooling_fix.py  test_ui.py  test_utils.py
